add general schema

--- a/en/001.md
+++ b/en/001.md
@@ -1,4 +1,4 @@
-# Historia
+# History
 
 Markdown (MD) fue creado por **Jhon Gruber** buscando un formato de edición ligero y facil de escribir, basado en convenciones utilizadas en correos electronicos de texto plano.
 
